--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Blue Flame Studios.
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Freya's Tail Developers.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://i.pinimg.com/originals/b1/c1/84/b1c1844020068522cc8bbe400c786c1c.jpg
 
 #
 # Flags below are optional
