--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Blue Flame Studios.
 description: Freya's Tail Developers.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://i.pinimg.com/originals/b1/c1/84/b1c1844020068522cc8bbe400c786c1c.jpg
+avatar: images/avatar.png
 
 #
 # Flags below are optional
@@ -19,14 +19,14 @@ avatar: https://i.pinimg.com/originals/b1/c1/84/b1c1844020068522cc8bbe400c786c1c
 footer-links:
   dribbble:
   email:
-  facebook:
+  facebook: BlueFlameStudios
   flickr:
-  github: barryclark/jekyll-now
+  github: 
   instagram:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
