--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Blue Flame Studios.
 description: Freya's Tail Developers.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: images/avatar.png
+avatar: https://github.com/ProfNerd/ProfNerd.github.io/blob/master/images/avatar.jpg?raw=true
 
 #
 # Flags below are optional
